--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,10 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+
+  assets:
+    - assets/images/loading.gif
+
   fonts:
     - family: Licorice-Regular
       fonts:
