--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   flutter_bloc: ^8.0.1
+  bloc_test: ^9.0.2
 
 dev_dependencies:
   flutter_test:
