--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc_test: ^9.0.2
   http: ^0.13.4
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
