--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   bloc_test: ^9.0.2
   http: ^0.13.4
   equatable: ^2.0.3
+  firebase_core: ^1.10.6
+  google_sign_in: ^5.2.1
+  firebase_auth: ^3.3.4
+  meta: ^1.7.0
+  rxdart: ^0.27.3
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
